<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, A1Activity!</string>
    <string name="app_name">A3</string>
    <string name="loadMsg">Loading Data...</string>
    
    <string name="genre_prompt">Choose a Genre</string>
    <string-array name="genre_array">
        <item>All</item>
        <item>Action</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Short</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>
    
    <string name="rating_prompt">Select a Rating</string>
    <string-array name="rating_array">
        <item>All</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
  		<item>5</item>
  		<item>6</item>
  		<item>7</item>
  		<item>8</item>
  		<item>9</item>
  		<item>10</item>
    </string-array>
    
    <string name="UserNameTextBox">Username:</string>
    <string name="PasswordTextBox">Password:</string>
    <string name="SignUpText">Sign Up</string>
    <string name="LogInText">Log In/Sign Up</string>
    <string name="BackButton">Back</string>
    <string name="AddButton">Add</string>
    <string name="FriendsTextView">Friends</string>
    <string name="MyRatingsTextView">My Favorites</string>
    <string name="ShareButton">Share</string>
    <string name="AddFavourite">+ Favorites</string>
    <string name="Rating">Rating: </string>
    <string name="Back">Back</string>
    
    
    <string name="movieViewTitle">title</string>
    <string name="movieViewYear">year</string>
    <string name="movieViewLength">length</string>
    <string name="movieViewCertification">certification</string>
    <string name="movieViewDirector">director name</string>
    <string name="movieViewRating">rating</string>
    
    <string name="movieViewDirectorDesc">From Director:</string>
    <string name="movieViewActorsDesc">Starring:</string>
    <string name="SearchButton">Search</string>
    <string name="movieViewGenresDesc">Genres:</string>
    <string name="movieViewGenres">genre1, genre2, genre3</string>
    <string name="movieViewActors">actor name1, actor name2, actor name3</string>
    <string name="Save">Save</string>
    <string name="Logout">Logout</string>
    <string name="Delete">Delete</string>
    <string name="AddMovie">+ Movie</string>
    
    
</resources>