<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="left"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.40" >

        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="24dp"
            android:layout_marginRight="30dp"
            android:text="@string/BackButton" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/SignUpButton"
            android:layout_alignBottom="@+id/SignUpButton"
            android:layout_marginRight="26dp"
            android:layout_toLeftOf="@+id/SignUpButton"
            android:text="@string/AddFavourite" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/SignUpButton"
            android:text="@string/movieViewCertification"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80px" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp"
            android:text="@string/movieViewDirectorDesc"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30px" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_alignLeft="@+id/textView3"
            android:text="@string/Rating"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/textView3"
            android:text="@string/movieViewDirector"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30px" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="0dp"
            android:text="@string/movieViewTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50px" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignRight="@+id/textView4"
            android:layout_below="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/progressBar1"
            android:layout_below="@+id/progressBar1"
            android:layout_marginTop="0dp"
            android:text="@string/movieViewLength"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="30dp"
            android:text="@string/movieViewActorsDesc"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30px" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:text="TextView"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView05"
            android:layout_below="@+id/TextView05"
            android:layout_marginTop="32dp"
            android:text="@string/movieViewGenresDesc"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30px" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView03"
            android:layout_below="@+id/TextView03"
            android:text="TextView"
            android:textSize="25dp" />

        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button1"
            android:layout_toRightOf="@+id/textView1"
            android:numStars="10" />

    </RelativeLayout>

</LinearLayout>