<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.40" >

        <Button
            android:id="@+id/BackButtonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/BackButton" />

        <TextView
            android:id="@+id/UserNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/BackButtonLogin"
            android:layout_marginTop="26dp"
            android:text="@string/UserNameTextBox"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/PasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/UserNameText"
            android:layout_marginTop="26dp"
            android:text="@string/PasswordTextBox"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/LogInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PasswordText"
            android:layout_marginTop="35dp"
            android:layout_toRightOf="@+id/BackButtonLogin"
            android:text="@string/LogInText" />

        <EditText
            android:id="@+id/UserNameTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/UserNameText"
            android:layout_alignBottom="@+id/UserNameText"
            android:layout_toRightOf="@+id/UserNameText" />

        <EditText
            android:id="@+id/PasswordTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/PasswordText"
            android:layout_alignBottom="@+id/PasswordText"
            android:layout_toRightOf="@+id/UserNameText"
            android:inputType="textPassword" />

    </RelativeLayout>

</LinearLayout>