<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="fill_horizontal" >

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="fill_parent"
            android:layout_height="450dip" >

        </FrameLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView2"
            android:layout_below="@id/frame"
            android:layout_marginLeft="20dip"
            android:text="@string/genre_prompt" />

        <Spinner
            android:id="@+id/genres"
            android:layout_width="200dip"
            android:layout_height="50dip"
            android:layout_below="@id/frame"
            android:prompt="@string/genre_prompt" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/login"
            android:layout_below="@id/frame"
            android:layout_marginLeft="20dip"
            android:layout_toRightOf="@id/genres"
            android:text="@string/rating_prompt" />

        <Spinner
            android:id="@+id/ratings"
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:layout_below="@id/frame"
            android:layout_toRightOf="@id/genres"
            android:prompt="@string/rating_prompt" />

        <Spinner
            android:id="@+id/directors"
            android:layout_width="225dip"
            android:layout_height="50dip"
            android:layout_below="@id/frame"
            android:layout_toRightOf="@id/ratings"
            android:visibility="gone" />

        <android.widget.Button
            android:id="@+id/login"
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:layout_below="@id/frame"
            android:layout_toRightOf="@id/ratings"
            android:onClick="login"
            android:text="Login" />

        <Button
            android:id="@+id/button1"
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:layout_below="@id/frame"
            android:layout_toRightOf="@+id/textView1"
            android:text="@string/SearchButton" />

        <EditText
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frame"
            android:layout_toLeftOf="@+id/AddButton"
            android:layout_toRightOf="@+id/button1"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/AddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/button1"
            android:text="@string/AddMovie"
            android:textColor="@drawable/green_button"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.58" />

</LinearLayout>